# vibrophone

./: CMakeLists.txt  README.md  main.cpp  requirements.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
Arduino/vibrophone-M5/: Blue.h  Freq.cpp  pot.hpp  upload.bat  vibrophone-M5.ino
Arduino/vibrophone-esp32/: Blue.cpp  Blue.h  Freq.h  Vibrophone.h  vibrophone-M5.ino
esp-idf/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp-idf/ESP32-WROOM32/: sdkconfig  sdkconfig.old
esp-idf/ESP32-WROOM32/main/: CMakeLists.txt  main.cpp
example/: Freq.h  config.h
main/: CMakeLists.txt  a2dp.cpp  main.cpp
main/include/: audio_output.h  bluetooth_handler.h  gpio_config.h
main/src/: audio_output.cpp  bluetooth_handler.cpp  gpio_config.cpp  main.cpp
vibrophone-M5/: Blue.cpp  Blue.h  Freq.cpp  Freq.h  Vibrophone.cpp  Vibrophone.h  config.h  vibrophone-M5.ino
vibrophone-esp32/: Freq.cpp  Vibrophone.cpp
