idf_component_register(
    SRCS
        "src/main.cpp"
        "src/audio_output.cpp"
        "src/bluetooth_handler.cpp"
        "src/gpio_config.cpp"
    INCLUDE_DIRS
        "include"
        "."
    REQUIRES
        bt
        driver
        esp_adc
        esp_hw_support
        freertos
        nvs_flash
        esp_system
        esp_common
        hal
)
